# AcoustiXfem

./: CMakeLists.txt  LICENSE  README.md
devel/: .CMakeLists.txt.swp  CMakeLists.txt
devel/BiotHelmholtz/: CMakeLists.txt  main.cc
devel/BiotHelmholtz/data/: .nfs0000000a041a758200000001  4  BiotXfem.msh  car.geo  car.msh  carXfem.geo  car_fem_mseat.msh  car_fem_mseat_nonfilm.msh  car_fem_p1.msh  car_fem_p2.msh  car_fem_translate.msh  car_film.geo  car_mul_seat.geo  car_mul_seat_xfem.geo  car_mul_seat_xfem.msh  car_mul_withoutfilm.geo  car_translate.geo  car_vide.geo  car_xfem.msh  car_xfem2.msh  car_xfem3.msh  car_xfem_mseat.msh  car_xfem_mseat_fine.msh  cylinder.geo  square.geo  squareXfem.geo  squareXfem_biotcoup.geo  squareXfem_test.geo  squarefem.geo  test_squre.msh  tube_cyl_2d.msh
devel/BiotHelmholtz/data/3D/: airplane.geo  airplane.msh  fem_b_2d.msh  fem_b_2d_30.msh  fem_b_2d_45.msh  fem_b_2d_fine.msh  fem_b_tube_cyl_2d.msh  fem_b_tube_cyl_2d_1.msh  fem_b_tube_cyl_2d_2.msh  fem_b_tube_cyl_2d_sand.msh  fem_b_tube_cyl_2d_sand_r015.msh  fem_b_tube_cyl_2d_sand_r02.msh  fem_b_tube_cyl_2d_sand_r025.msh  fem_b_tube_cyl_2d_sand_r1.msh  fem_b_tube_cyl_2d_sand_r2.msh  fem_multilayer_1.msh  fem_multilayer_oblique.msh  fem_multilayer_oblique_45.msh  sqaure_fem_2d.geo  sqaure_fem_cyl.geo  sqaure_fem_multi_cyl.geo  sqaure_fem_multilager.geo  sqaurexfem.geo  sqaurexfem_2d.geo  xfem.msh  xfem_2d.msh  xfem_2d_fine.msh
devel/BiotHelmholtz/data/Condition_test/: squareFem.geo  squareXfem.geo  xfem_null_2.msh  xfem_null_3.msh  xfem_null_4.msh
devel/BiotHelmholtz/data/FEM/: FEM_struct_0.msh  FEM_struct_1.msh  FEM_struct_2.msh  FEM_struct_3.msh  FEM_struct_4.msh
devel/BiotHelmholtz/data/Material/: .polyurethane.mat.swp  Biot_A_JASA2007.mat  Biot_C_JASA2007.mat  XFM.mat  c.mat  carpet_WB.mat  foam_biot_1_G0_2015.mat  foam_biot_2_GO_2015.mat  foam_biot_2_GO_2015_test.mat  polyurethane.mat  porous_biot_film_woven.mat  porous_fluid.mat  porous_limp_film_nonwoven.mat  porous_limp_film_woven.mat  water_fluid.mat
devel/BiotHelmholtz/data/air_biot/: coup_struct_0.msh  coup_struct_0_test_1.msh  coup_struct_1.msh  coup_struct_2.msh  coup_struct_3.msh  coup_struct_4.msh  squareXfem.geo  square_ustr_2.msh  square_ustr_4.msh  square_ustr_mm0.msh  square_ustr_mm1.msh  square_ustr_mm2.msh  square_ustr_mm3.msh  square_ustr_mm4.msh
devel/BiotHelmholtz/data/biot_biot/: bb_fem_00.msh  bb_fem_01.msh  bb_fem_02.msh  bb_fem_03.msh  bb_fem_04.msh  bb_xfem_00.msh  bb_xfem_01.msh  bb_xfem_02.msh  bb_xfem_03.msh  bb_xfem_04.msh  bb_xfem_10.msh  bb_xfem_20.msh  bb_xfem_unst_00.msh  bb_xfem_unst_01.msh  bb_xfem_unst_02.msh  bb_xfem_unst_03.msh  bb_xfem_unst_04.msh  bb_xfem_unst_05.msh
devel/BiotHelmholtz/data/car/: car_2seat.geo  car_fem_2seats.msh  car_fem_2seats_withfilm2.msh  car_fem_2seats_withfilm_test.msh  car_fem_2seats_withfilm_test08.msh  car_fem_2seats_withfilm_test082.msh  car_fem_film.msh  car_fem_p1.msh  car_fem_p11.msh  car_fem_p2.msh  car_fem_p22.msh  car_fem_pA.msh  car_fem_pA1.msh  car_fem_pB.msh  car_fem_pB1.msh  car_fem_pC.msh  car_fem_vide.msh  car_mul_withoutfilm.geo  car_xfem_1seat.msh  car_xfem_2seat.msh  car_xfem_2seat2.msh
devel/BiotHelmholtz/data/cylinder/: square_4.msh  squares_0.msh  squares_1.msh  squares_2.msh  squares_3.msh  squares_4.msh  squares_5.msh  squares_6.msh  squares_scatter.geo  squares_scatter_struct_3.msh
devel/BiotHelmholtz/data/square_mesh/: square.geo  square.msh  square_3.msh  square_struct_m2.msh  square_ustr.msh  square_ustr_3.msh  square_ustr_m3.msh
devel/HelPSG/: CMakeLists.txt  main.cc
devel/HelPSG/data/: one_elem.msh  square.geo  tri.geo  tri1x1.msh
devel/HelPSG/data/car/: car.geo  car.msh  carXfem.geo  fem_1.msh  fem_2.msh  fem_3.msh  fem_31.msh  fem_per.msh  xfem_0_3.msh  xfem_1.msh  xfem_2.msh  xfem_31.msh
devel/HelPSG/data/cylinder/: cylinderm_1.msh  cylinderm_5.msh  squareR_32.msh  squareR_64.msh  squareXfem.geo  square_128.msh  square_32.msh  squares_scatter_struct_4.msh
devel/HelPSG/data/material/: porous_fluid_A_JASA2007.mat  porous_fluid_GODG_2015_1.mat  porous_fluid_GODG_2015_2.mat  porous_fluid_XFM.mat  porous_fluid_chazot_A.mat  porous_fluid_chazot_C.mat  porous_fluid_polyurethane.mat
devel/HelPSG/data/square_mesh/: fem_1.msh  fem_2.msh  fem_3.msh  fem_4.msh  fem_5.msh  square.geo  square_2.msh  square_5.msh  square_ustr_5.msh  square_ustr_m5.msh  square_ustruc_m1.msh  square_ustruc_m2.msh  square_ustruc_m3.msh  square_ustruc_m4.msh  square_ustruc_m5.msh  square_ustruc_m6.msh
devel/HelPSG/data/tube/: sqaurexfem_2d.geo
devel/PSGBiot/: CMakeLists.txt  main.cc
devel/PSGBiot/data/: square.geo  square_0.mesh  square_0.msh  square_1.msh  square_2.msh  square_3.msh  squares_scatter_struct_0.msh  squares_scatter_struct_1.msh  squares_scatter_struct_2.msh
devel/PSGBiot/data/material/: Biot_B_JASA2007.mat  air_fluid.mat
devel/runHelmholtz/: CMakeLists.txt  main.cc
devel/runHelmholtz/data/: 4  car.geo  car_fem.msh  multilayer.geo  multilayer.msh  multilayerXfem.geo  multilayerXfem.msh  multilayerXfem_1.msh  multilayerXfem_2.msh  squareXfem.geo  square_fem.msh  square_test.msh  untitled.geo  xfem_null.msh
devel/runHelmholtz/data/3D/: .main_td.dat.swp  car_fem_noseat.msh  fem_2d.msh  fem_2d_1.msh  multi_2d_fem.msh  multi_2d_fem_3l.msh  sqaure_fem.geo  sqaure_fem_2d.geo  sqaure_fem_multilager.geo  sqaurexfem.geo  sqaurexfem_2d.geo  squareXfem_circle.geo  xfem_2d.msh  xfem_2d_2.msh  xfem_2d_3.msh  xfem_2d_4.msh  xfem_2d_corse.msh  xfem_r.msh
devel/runHelmholtz/data/Condition_test/: xfem_null_0.msh  xfem_null_1.msh
devel/runHelmholtz/data/FEM/: fem_m1.msh  sqaure_fem_2d.geo
devel/runHelmholtz/data/cylinder/: cylinder.geo  cylinderm_4.msh  squareR_16.msh  square_64.msh
devel/runHelmholtz/data/material/: air_fluid_1.mat  porous_fluid_B_JASA2007.mat  water_fluid.mat  (+1 more)
devel/testPSG/: CMakeLists.txt  main.cc  main.cc~  main.h
devel/testPSG/data/: matrix.mat  square.geo  square.msh
src/xtool-test/: BiotexactSolutions.cc  BiotexactSolutions.h  CMakeLists.txt
src/xtool-test/subGroupPartman/: CMakeLists.txt  main.cc  main.h
(+103 files in other folders)
